objects/Account.object
<CustomObject>
    <fields>
        <fullName>AMS_Id__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>AMS Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_CSN__c</fullName>
        <label>AM - CSN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Singh</fullName>
                </value>
                <value>
                    <fullName>Alan Day</fullName>
                </value>
                <value>
                    <fullName>Alda Egurrola-Wienke</fullName>
                </value>
                <value>
                    <fullName>Alison LeRoy</fullName>
                </value>
                <value>
                    <fullName>Alyssa Klimas</fullName>
                </value>
                <value>
                    <fullName>Becki Miltenberger</fullName>
                </value>
                <value>
                    <fullName>Becky Matlack</fullName>
                </value>
                <value>
                    <fullName>Benjamin Fama</fullName>
                </value>
                <value>
                    <fullName>Brian Fleagle</fullName>
                </value>
                <value>
                    <fullName>Brittney Garcia</fullName>
                </value>
                <value>
                    <fullName>Bryant Waters</fullName>
                </value>
                <value>
                    <fullName>Buledy Sangwa</fullName>
                </value>
                <value>
                    <fullName>Chela Evans</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Almand</fullName>
                </value>
                <value>
                    <fullName>Georgette Young</fullName>
                </value>
                <value>
                    <fullName>Janine Alsalam</fullName>
                </value>
                <value>
                    <fullName>Joanne Augustin</fullName>
                </value>
                <value>
                    <fullName>John Doolittle</fullName>
                </value>
                <value>
                    <fullName>John Oliver</fullName>
                </value>
                <value>
                    <fullName>Keith Lange</fullName>
                </value>
                <value>
                    <fullName>Ken McGovern</fullName>
                </value>
                <value>
                    <fullName>Kyle Wolfson</fullName>
                </value>
                <value>
                    <fullName>Lindsay Watts</fullName>
                </value>
                <value>
                    <fullName>Madeleine Kent</fullName>
                </value>
                <value>
                    <fullName>Marina Machado</fullName>
                </value>
                <value>
                    <fullName>Mark Jacobs</fullName>
                </value>
                <value>
                    <fullName>Mark Nagy</fullName>
                </value>
                <value>
                    <fullName>Matt Macy</fullName>
                </value>
                <value>
                    <fullName>Melissa Negron</fullName>
                </value>
                <value>
                    <fullName>Michael Webber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_CrowdCompass__c</fullName>
        <label>AM - CrowdCompass</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Aftab Alam</fullName>
                </value>
                <value>
                    <fullName>Alex Johnson</fullName>
                </value>
                <value>
                    <fullName>Allison Spirer</fullName>
                </value>
                <value>
                    <fullName>Amanda Payne</fullName>
                </value>
                <value>
                    <fullName>Amy Chugh</fullName>
                </value>
                <value>
                    <fullName>Andrew MacIsaac</fullName>
                </value>
                <value>
                    <fullName>Andy Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Anujeet Verma</fullName>
                </value>
                <value>
                    <fullName>Arielle Meizen</fullName>
                </value>
                <value>
                    <fullName>Arvind Kumar</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Barry Womack</fullName>
                </value>
                <value>
                    <fullName>Becca Bicer</fullName>
                </value>
                <value>
                    <fullName>Benjamin Ball</fullName>
                </value>
                <value>
                    <fullName>Bill Piekarski</fullName>
                </value>
                <value>
                    <fullName>Blake Rivers</fullName>
                </value>
                <value>
                    <fullName>Brandon Beall</fullName>
                </value>
                <value>
                    <fullName>Brittany Jennings</fullName>
                </value>
                <value>
                    <fullName>Caitlin Guichard</fullName>
                </value>
                <value>
                    <fullName>Chinmay Gulati</fullName>
                </value>
                <value>
                    <fullName>Chris Kearney</fullName>
                </value>
                <value>
                    <fullName>Christian Luik</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
                <value>
                    <fullName>Christopher Rost</fullName>
                </value>
                <value>
                    <fullName>Christopher Walizer</fullName>
                </value>
                <value>
                    <fullName>Clinton Croswell</fullName>
                </value>
                <value>
                    <fullName>Coleman Bacon</fullName>
                </value>
                <value>
                    <fullName>Colin Morrison</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Estimated_Client_Wallet_Size__c</fullName>
        <label>AM Estimated Client Wallet Size $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AM_Event__c</fullName>
        <inlineHelpText>Account Manager - Responsible for Managing and Renewing this Customer</inlineHelpText>
        <label>AM – Event Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Aftab Alam</fullName>
                </value>
                <value>
                    <fullName>Akshay Doshi</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Allison Spirer</fullName>
                </value>
                <value>
                    <fullName>Amanda Payne</fullName>
                </value>
                <value>
                    <fullName>Amy Chugh</fullName>
                </value>
                <value>
                    <fullName>Amy Zaczkowski</fullName>
                </value>
                <value>
                    <fullName>Andrew MacIsaac</fullName>
                </value>
                <value>
                    <fullName>Andy Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Ann OBrien</fullName>
                </value>
                <value>
                    <fullName>Anujeet Verma</fullName>
                </value>
                <value>
                    <fullName>Arielle Meizen</fullName>
                </value>
                <value>
                    <fullName>Arvind Kumar</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Austin Alam</fullName>
                </value>
                <value>
                    <fullName>Barry Greene</fullName>
                </value>
                <value>
                    <fullName>Barry Womack</fullName>
                </value>
                <value>
                    <fullName>Becca Bicer</fullName>
                </value>
                <value>
                    <fullName>Benjamin Ball</fullName>
                </value>
                <value>
                    <fullName>Bill Piekarski</fullName>
                </value>
                <value>
                    <fullName>Blake Rivers</fullName>
                </value>
                <value>
                    <fullName>Bradley Blinn</fullName>
                </value>
                <value>
                    <fullName>Brandon Beall</fullName>
                </value>
                <value>
                    <fullName>Brian Ludwig</fullName>
                </value>
                <value>
                    <fullName>Brittany Jennings</fullName>
                </value>
                <value>
                    <fullName>Brittlynn Goddard</fullName>
                </value>
                <value>
                    <fullName>Caitlin Guichard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_OS__c</fullName>
        <description>This field is created for AM-OS to be added as Account Team members.</description>
        <label>AM-OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_PA__c</fullName>
        <label>AM - Sourcing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM - Sourcing</fullName>
                </value>
                <value>
                    <fullName>Amy Chugh</fullName>
                </value>
                <value>
                    <fullName>Jessica John</fullName>
                </value>
                <value>
                    <fullName>Kathryn Kozak</fullName>
                </value>
                <value>
                    <fullName>Lisa Welch</fullName>
                </value>
                <value>
                    <fullName>Olivia Murray-Taylor</fullName>
                </value>
                <value>
                    <fullName>Taylor Mohrmann</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Pre_Sales_Event__c</fullName>
        <label>AM Associate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lara Swan</fullName>
                </value>
                <value>
                    <fullName>Izzy Hettiarachchi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Survey__c</fullName>
        <label>AM - Inquisium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Allison Spirer</fullName>
                </value>
                <value>
                    <fullName>Amy Chugh</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Arvind Kumar</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Aftab Alam</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Becca Bicer</fullName>
                </value>
                <value>
                    <fullName>Brittany Jennings</fullName>
                </value>
                <value>
                    <fullName>Brittlynn Goddard</fullName>
                </value>
                <value>
                    <fullName>Caitlin Guichard</fullName>
                </value>
                <value>
                    <fullName>Chris Kearney</fullName>
                </value>
                <value>
                    <fullName>Christian Luik</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
                <value>
                    <fullName>Christopher McNerney</fullName>
                </value>
                <value>
                    <fullName>Christopher Rost</fullName>
                </value>
                <value>
                    <fullName>Christopher Walizer</fullName>
                </value>
                <value>
                    <fullName>Coleman Bacon</fullName>
                </value>
                <value>
                    <fullName>Colin Morrison</fullName>
                </value>
                <value>
                    <fullName>Courtney Smith</fullName>
                </value>
                <value>
                    <fullName>Debby Fischer</fullName>
                </value>
                <value>
                    <fullName>Denise Farrell</fullName>
                </value>
                <value>
                    <fullName>Erin Dugan</fullName>
                </value>
                <value>
                    <fullName>Erin Phelps</fullName>
                </value>
                <value>
                    <fullName>Ibrahim Lamay</fullName>
                </value>
                <value>
                    <fullName>Jack Ross</fullName>
                </value>
                <value>
                    <fullName>Jaya Prasad</fullName>
                </value>
                <value>
                    <fullName>Jessica Arrazola</fullName>
                </value>
                <value>
                    <fullName>Jessica John</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_connected_with__c</fullName>
        <label>API connected with</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>123Signup</fullName>
                </value>
                <value>
                    <fullName>44fish.com</fullName>
                </value>
                <value>
                    <fullName>Act-On</fullName>
                </value>
                <value>
                    <fullName>Acumen</fullName>
                </value>
                <value>
                    <fullName>Advanced CRM</fullName>
                </value>
                <value>
                    <fullName>Affiniscape (m360)</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>Alpha Software</fullName>
                </value>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>aMember Pro</fullName>
                </value>
                <value>
                    <fullName>Apollo</fullName>
                </value>
                <value>
                    <fullName>Association Management Online</fullName>
                </value>
                <value>
                    <fullName>AssociationVoice</fullName>
                </value>
                <value>
                    <fullName>Attendee Interactive</fullName>
                </value>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>Avectra</fullName>
                </value>
                <value>
                    <fullName>AWeber</fullName>
                </value>
                <value>
                    <fullName>Bernard Data Solutions</fullName>
                </value>
                <value>
                    <fullName>BuilderFusion</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>CDS (convention data services)</fullName>
                </value>
                <value>
                    <fullName>ChamberMaster</fullName>
                </value>
                <value>
                    <fullName>Ciboodle</fullName>
                </value>
                <value>
                    <fullName>CiviCRM</fullName>
                </value>
                <value>
                    <fullName>ClubExpress</fullName>
                </value>
                <value>
                    <fullName>CME Tracker</fullName>
                </value>
                <value>
                    <fullName>Concur Finance</fullName>
                </value>
                <value>
                    <fullName>Concur Travel</fullName>
                </value>
                <value>
                    <fullName>Constant Contact</fullName>
                </value>
                <value>
                    <fullName>Convio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARA_Emergency_Notes__c</fullName>
        <label>ARA Emergency Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARA_Escalation_Count__c</fullName>
        <label>ARA Escalation Count</label>
        <summaryForeignKey>ARA__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_C_Lost_Details__c</fullName>
        <label>A/C Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_C_Recyle_Competitor_Name__c</fullName>
        <label>A/C Recyle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Planner_Status_Details__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Connection</fullName>
                </value>
                <value>
                    <fullName>Biz Bash</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings</fullName>
                </value>
                <value>
                    <fullName>EmpowerMINT</fullName>
                </value>
                <value>
                    <fullName>Event Connect</fullName>
                </value>
                <value>
                    <fullName>Eventective</fullName>
                </value>
                <value>
                    <fullName>Hotel Planner</fullName>
                </value>
                <value>
                    <fullName>Smart Meetings</fullName>
                </value>
                <value>
                    <fullName>Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Starcite</fullName>
                </value>
                <value>
                    <fullName>Uniquevenues</fullName>
                </value>
                <value>
                    <fullName>Venuedirectory.com</fullName>
                </value>
                <value>
                    <fullName>Venue Finder</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>OnPeak</fullName>
                </value>
                <value>
                    <fullName>StarGroups</fullName>
                </value>
                <value>
                    <fullName>CVB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_c_Percentage_Score_CT__c</fullName>
        <formula>Case(No_of_Events_CT__c,"1 event",6,"2-5 events",6,"6-20 events",7,"21-100 events",8,"Over 100 events",10,0)
+
Case(Online_Presence__c,"Good",10,"Average",5,"Bad",0,0)
+
Case(No_of_Attendees_CT__c,"0-2,500 attendees",5,"2,501-5,000 attendees",10,"5,001-10,000 attendees",20,"10,001-50,000 attendees",30,"50,001-100,000 attendees",30,"Over 100,000 attendees",30,0)
+
Case(Venue_Capacity_CT__c,"0-100 people",5,"101-300 people",10,"301-500 people",20,"501-2,500 people",30,"2,501-5,000 people",30,"Over 5,000 people",30,0)
+
Case(Average_Ticket_Price_CT__c,"Free",-5,"$.01-$9.99",5,"$9.99-$19.99",7,"$20-$29.99",10,"$30-$49.99",10,"$50-$99.99",15,"$100 and up",15,0)
+
Case(Bucket__c,"D",0,"C",10,"B",15,"A",20,0)
+
Case(Feature__c,"GA",15,
"Res. Seating",0,
"Subsc. Ticketing",0,
"Donation Processing",0,
"GA, Res. Seating",5,
"GA, Subsc. Ticketing",5,
"GA, Donation Processing",5,
"Res. Seating, Subsc. Ticketing",0,
"Res. Seating, Donation Processing",0,
"Subsc. Ticketing, Donation Processing",0,
"GA, Res. Seating, Subsc. Ticketing",0,
"Res. Seating, Subsc. Ticketing, Donation Processing",0,
"Subsc. Ticketing, Donation Processing, GA",0,
"Donation Processing, GA, Res. Seating",5,
"GA, Res. Seating, Subsc. Ticketing, Donation Processing",0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/c Percentage Score (CT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_c_Percentage_Star_Rating_CT__c</fullName>
        <formula>Case(A_c_Percentage_Score_CT__c,6,IMAGE("/img/samples/stars_500.gif", "image from Documents tab"),5,IMAGE("/img/samples/stars_500.gif", "image from Documents tab"),4,IMAGE("/img/samples/stars_400.gif", "image from Documents tab"),3,IMAGE("/img/samples/stars_300.gif", "image from Documents tab"),2,IMAGE("/img/samples/stars_200.gif", "image from Documents tab"),1,IMAGE("/img/samples/stars_100.gif", "image from Documents tab"),IMAGE("/img/samples/stars_000.gif", "image from Documents tab"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/c Percentage Star Rating (CT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_c_SA_managed_status__c</fullName>
        <label>A/c SA managed status?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Name_Dev__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Name Dev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Score__c</fullName>
        <formula>IF(AND((NOW() - Active_Date_Time__c)/365&gt;0,(NOW() - Active_Date_Time__c)/365&lt;=1),5, 
IF(AND((NOW() - Active_Date_Time__c)/365&gt;1,(NOW() - Active_Date_Time__c)/365&lt;=2),4, 
IF(AND((NOW() - Active_Date_Time__c)/365&gt;2,(NOW() - Active_Date_Time__c)/365&lt;=5),3, 
IF((NOW() - Active_Date_Time__c)/365&gt;5,3,0))))*0.15 

+ 

IF(AND(Last_12_month_spent__c&gt;0,Last_12_month_spent__c&lt;=7499),1, 
IF(AND(Last_12_month_spent__c&gt;7500,Last_12_month_spent__c&lt;=74999),3, 
IF(AND(Last_12_month_spent__c&gt;74999,Last_12_month_spent__c&lt;=399999),4, 
IF(Last_12_month_spent__c&gt;400000,5,0))))*0.15 

+ 

IF(AND(Expected_Revenue__c&gt;0,Expected_Revenue__c&lt;=3000),1, 
IF(AND(Expected_Revenue__c&gt;3000,Expected_Revenue__c&lt;=6000),2, 
IF(AND(Expected_Revenue__c&gt;6000,Expected_Revenue__c&lt;=10000),3, 
IF(AND(Expected_Revenue__c&gt;10000,Expected_Revenue__c&lt;=20000),4, 
IF(Expected_Revenue__c&gt;20000,5,0)))))*0.15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepting_Abstract__c</fullName>
        <label>Accepting Abstract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_18_digit_id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Account 18 digit id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Assignment_Value__c</fullName>
        <formula>Last_12_month_spent__c + NBB_Pipeline_Verbal_Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Account Assignment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Cloud__c</fullName>
        <label>Account Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event Cloud</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Event and Hospitality Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Fields_Edit_Date__c</fullName>
        <label>Account Fields Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Logo_Type__c</fullName>
        <description>Potential New Logo: No active client relationship (no active opportunities) in the entire Account Tree (parent or subsidiary)
Please note for accounts that are closed lost or ended in the previous calendar year, we allow 12 month of grace time before reporting it as ‘potential logo’ 

Logo Expansion:  Active client relationship (active opportunities) exists in the Account Tree (Parent or Subsidiary) in which we are closing additional business, under new Account (ID)s.

Logo Expansion-WinBack: Active client relationship (active opportunities) exists in the Account Tree (Parent or Subsidiary) in which we are closing additional business, under new Account (ID)s that ended 12 months ago. This is in a "winback" stage as per Enterprise sales definition of "Winback". **</description>
        <inlineHelpText>Potential New Logo: No Active Relationships

Logo Expansion:  Active client relationship - closing additional business

Logo Expansion-Winback: Active client relationship - closing additional business under Account (ID)s that ended 12 months ago</inlineHelpText>
        <label>Account Logo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential New Logo</fullName>
                </value>
                <value>
                    <fullName>Logo Expansion</fullName>
                </value>
                <value>
                    <fullName>Logo Expansion-WinBack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Management_Tier__c</fullName>
        <label>Account Management Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD - AP</fullName>
                </value>
                <value>
                    <fullName>BD - Partner</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Tier - 1</fullName>
                </value>
                <value>
                    <fullName>Tier - 2</fullName>
                </value>
                <value>
                    <fullName>Tier - 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Planning_Business_Goals__c</fullName>
        <label>Account Planning Business Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Planning_Strategy__c</fullName>
        <label>Account Planning Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <inlineHelpText>*Active/Inactive denotes whether the account is active or inactive in CVII.
*Billing/Collections: Billing is following up for the payment.
*Legal: The client is in Legal</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - AutoRenewal</fullName>
                </value>
                <value>
                    <fullName>Active - External Collections</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Inactive Customer - CSN Planner Active</fullName>
                </value>
                <value>
                    <fullName>Inactive Customer - CSN Supplier Active</fullName>
                </value>
                <value>
                    <fullName>Inactive Customer - Reflag</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Trial_Status__c</fullName>
        <label>Account Trial Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event Enterprise (Active)</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Event Professional (Active)</fullName>
                </value>
                <value>
                    <fullName>Event Professional (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Event Express (Active)</fullName>
                </value>
                <value>
                    <fullName>Event Express (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Inquisium (Active)</fullName>
                </value>
                <value>
                    <fullName>Inquisium (Inactive)</fullName>
                </value>
                <value>
                    <fullName>CSN-Planner (Active)</fullName>
                </value>
                <value>
                    <fullName>CSN-Planner (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions (Active)</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Cvent Express (Active)</fullName>
                </value>
                <value>
                    <fullName>Cvent Express (Inactive)</fullName>
                </value>
                <value>
                    <fullName>Existing Customer And Trial Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Value_Booked_12_months_rolling__c</fullName>
        <label>Account Value Booked 12 months rolling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>